Day 13 - API Standardization for Application entity